# solo-map-remote-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/claude/.claude/commands/: compare-loan.md
configs/claude/.claude/skills/comparison-engine/: SKILL.md
configs/codex/: AGENTS.md
configs/cursor/.cursor/: mcp.json
configs/cursor/.cursor/rules/: comparison-engine.mdc
configs/gemini/: GEMINI.md
configs/gemini/.gemini/: settings.json
configs/gemini/.gemini/commands/compare/: loan.toml
configs/hermes/: hermes-agent-profile.yaml
data/: loan_products.json  plugin_manifest.json
deploy/: mcp.solo-map.app.nginx.conf  setup-codex-users.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md
examples/: generic_saas_compare.json  housing_refinance_compare.json  loan_compare.json
skills/comparison-engine/scripts/: example_loan_payload.json
src/comparison_engine/: __init__.py  api.py  data_loader.py  engine.py  mcp_server.py  models.py
src/comparison_engine/static/: copy-buttons.js
tests/: test_api_auth.py  test_engine.py
