[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solo-map-comparison-engine"
version = "0.1.0"
description = "Generic comparison engine with FastAPI and MCP adapters for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "solo-map contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "mcp>=1.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "httpx>=0.27.0"
]

[project.scripts]
solo-compare-api = "comparison_engine.api:main"
solo-compare-mcp = "comparison_engine.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
comparison_engine = ["py.typed", "static/*.png"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
